--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="login">LOGIN</string>
+    <string name="no_account_msg">Don\'t have an account?</string>
+    <string name="create_account">Create Account</string>
 </resources>
