find user by email; fixed broadcast receiver

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="generate_avatar_txt">Tap to generate user avatar</string>
     <string name="create_user">Create User</string>
     <string name="generate_background_color">Generate Background Color</string>
+    <string name="logout">LOGOUT</string>
 </resources>
